Assorted bug fixes and changes for flat-sat testing

--- a/home/exp267/provider.properties
+++ b/home/exp267/provider.properties
@@ -7,6 +7,6 @@ helpertools.configurations.provider.app.user=exp267
 # OPS-SAT APID in the app
 # It has to be within reserved Experiments APIDs range (1024-1535)
 # Typically it is 1024+<experiment_id>
-org.ccsds.moims.mo.malspp.apid=1024+267
+org.ccsds.moims.mo.malspp.apid=1291
 
 
